Landing page template CSS and HTML completed

--- a/landing_page/landing_page/index.html
+++ b/landing_page/landing_page/index.html
@@ -1,47 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css">
-    </head>
+</head>
+<body>
+    <div>
+        <div class="header">
+                <h1 class="logo">Novus Insights</h1>
+            <ul class="links">
+                <li class="link"><a href="/pages/page-1.html">Page 1</li></a>
+                <li class="link"><a href="/pages/page-2.html">Page 2</li></a>
+                <li class="link"><a href="/pages/page-3.html">Page 3</li></a>
+            </ul>
+        </div>
+        <div class="spacer">
+        </div>
 
-    <body>
-        <div>
-            <div class="header">
-                <div>
-                    <h1 class="logo">Great Website!</h1>
+        <!-- Content 1 -->
+        <div class="content-1">
+            <div class="left-content-1">
+                <div class="button-info">
+                    <h2>This website is awesome</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, nulla odit minus, et facere reprehenderit quibusdam eveniet iste nemo sed sint iusto illum, ratione tempore iure? Eveniet voluptates laudantium nam!</p>
+                    <button>Sign Up Today!</button>
                 </div>
-                <ul class="links">
-                    <li class="link">Page 1</li>
-                    <li class="link">Page 2</li>
-                    <li class="link">Page 3</li>
+            </div>
+            <div class="right-content-1">
+                <img src="/images/content-1-image">
+            </div>
+        </div> <!-- Closing tag for Content 1 -->
+
+        <!-- Content 2 -->
+        <div class="content-2">
+            <div class="top-section">
+                <div class="random-info">
+                    <h2 style="margin-top: 50px;">Some Random Information.</h2>
+                </div>
+            </div>
+            <div class="photos-text">
+                <ul>
+                    <li class="photo-box">
+                        <img src="/images/breaking-news.jpg">
+                            <span>text below image</span>
+                    </li>
+                    <li class="photo-box">
+                        <img src="/images/traffic.jpg">
+                            <span>text below image</span>
+                    </li>
+                    <li class="photo-box">
+                        <img src="/images/weather.jpg">
+                            <span>text below image</span>
+                    </li>
+                    <li class="photo-box">
+                        <img src="/images/News-Plunging-Stocks-401k.jpg">
+                            <span>text below image</span>
+                    </li>
                 </ul>
             </div>
-            <div class="spacer">
-            </div>
-
-            <div class="content-1">
-                <div class="left-content-1">
-                    <div class="h2">
-                    <h2>This website is awesome</h2>
-                    </div>
-                    <div class="p">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, nulla odit minus, et facere reprehenderit quibusdam eveniet iste nemo sed sint iusto illum, ratione tempore iure?</p>
-                    </div>
-                    <div class="button">
-                    <button>Sign up!</button>
-                    </div>
-                </div>
-                <div class="right-content-1">
-                    <img src="/images/content-1-image">
-                </div>
-            </div>
-
         </div>
-    </body>
 
+        <div class="content-3">
+            <div class="text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi suscipit placeat labore dolorem ab! Dolorum est, sed eligendi labore. sed eligendi labore.</p>
+            </div>
+            <div class="signature">
+                <p>- Some Dude</p>
+            </div>
+        </div>
 
+        <div class="content-4">
+            <div class="box">
+                <div class="left-content-2">
+                    <h2>Call to action! Advertising!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                </div>
+                <div class="button-2">
+                    <button>Sign Up!</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</body>
 </html>
-
