Added placeholder pages

--- a/landing_page/landing_page/index.html
+++ b/landing_page/landing_page/index.html
@@ -11,9 +11,11 @@
         <div class="header">
                 <h1 class="logo">Novus Insights</h1>
             <ul class="links">
-                <li class="link"><a href="/pages/page-1.html">Page 1</li></a>
-                <li class="link"><a href="/pages/page-2.html">Page 2</li></a>
-                <li class="link"><a href="/pages/page-3.html">Page 3</li></a>
+                <li class="link"><a href="/landing_page/landing_page/index.html">Home</li></a>
+            <li class="link"><a href="/landing_page/pages/page-1.html">U.S. News</li></a>
+            <li class="link"><a href="/landing_page/pages/page-2.html">Finance News</li></a>
+            <li class="link"><a href="/landing_page/pages/page-3.html">Traffic News</li></a>
+            <li class="link"><a href="/landing_page/pages/page-4.html">Weather News</li></a>
             </ul>
         </div>
         <div class="spacer">
@@ -29,7 +31,7 @@
                 </div>
             </div>
             <div class="right-content-1">
-                <img src="/images/content-1-image">
+                <img src="/landing_page/images/content-1-image">
             </div>
         </div> <!-- Closing tag for Content 1 -->
 
@@ -43,25 +45,25 @@
             <div class="photos-text">
                 <ul>
                     <li class="photo-box">
-                        <img src="/images/breaking-news.jpg">
+                        <img src="/landing_page/images/News-Plunging-Stocks-401k.jpg">
                             <span>text below image</span>
                     </li>
                     <li class="photo-box">
-                        <img src="/images/traffic.jpg">
+                        <img src="/landing_page/images/breaking-news.jpg">
                             <span>text below image</span>
                     </li>
                     <li class="photo-box">
-                        <img src="/images/weather.jpg">
+                        <img src="/landing_page/images/weather.jpg">
                             <span>text below image</span>
                     </li>
                     <li class="photo-box">
-                        <img src="/images/News-Plunging-Stocks-401k.jpg">
+                        <img src="/landing_page/images/traffic.jpg">
                             <span>text below image</span>
                     </li>
                 </ul>
             </div>
         </div>
-
+<!-- Content-3 -->
         <div class="content-3">
             <div class="text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi suscipit placeat labore dolorem ab! Dolorum est, sed eligendi labore. sed eligendi labore.</p>
@@ -70,7 +72,7 @@
                 <p>- Some Dude</p>
             </div>
         </div>
-
+<!-- Content-4 -->
         <div class="content-4">
             <div class="box">
                 <div class="left-content-2">
@@ -82,7 +84,12 @@
                 </div>
             </div>
         </div>
-
+<!-- Footer -->
+        <div class="footer">
+            <div>
+                Insert Copyright Text
+            </div>
+        </div>
     </div>
 </body>
 </html>
