--- a/landing_page/pages/page-4.html
+++ b/landing_page/pages/page-4.html
@@ -22,10 +22,10 @@
     <!-- Content-1 -->
     <div class="content-1">
         <div class="head-text">
-            <h2>U.S. News</h2>
+            <h2>Weather News</h2>
         </div>
         <div class="head-img">
-            <img src="/landing_page/images/breaking-news.jpg">
+            <img src="/landing_page/images/weather.jpg">
         </div>
     <!-- content-2 -->
         <div class="content-2">
